# lib/api-spec/openapi.yaml
@@ -728,6 +728,32 @@ components:
         clockStyle:
           type: string
           enum: [digital, clean]
+        logoOverlayEnabled:
+          type: boolean
+        logoUrl:
+          type: string
+        logoPosition:
+          type: string
+          enum: [top-left, top-right, bottom-left, bottom-right, center]
+        logoSize:
+          type: integer
+        logoOpacity:
+          type: integer
+        textOverlayEnabled:
+          type: boolean
+        textOverlayContent:
+          type: string
+        textOverlayPosition:
+          type: string
+          enum: [top-left, top-center, top-right, center-left, center, center-right, bottom-left, bottom-center, bottom-right]
+        textOverlayFontSize:
+          type: integer
+        textOverlayColor:
+          type: string
+        textOverlayBg:
+          type: string
+        textOverlayBold:
+          type: boolean
       required:
         - isBlack
         - isClear
